log
Tue 23 Aug 2022 12:08:06 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3f45e45
Tue 23 Aug 2022 12:17:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:17:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   17 |     c= a+ b;
      |      ^
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0b8447f
Tue 23 Aug 2022 12:17:53 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
13412a5
Tue 23 Aug 2022 12:18:47 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
573761f
Tue 23 Aug 2022 12:19:27 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a2ad152
Tue 23 Aug 2022 12:20:14 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d14ef6d
Tue 23 Aug 2022 12:22:31 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  140 |     return NULL;
      |            ^~~~
exercises.c:138:6: note: declared here
  138 | void sumaV2(int a1, int a2, int b1, int b2, Vector *c)
      |      ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
182c7ea
Tue 23 Aug 2022 12:25:42 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  140 |     return NULL;
      |            ^~~~
exercises.c:138:6: note: declared here
  138 | void sumaV2(int a1, int a2, int b1, int b2, Vector *c)
      |      ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0334d5b
Tue 23 Aug 2022 12:26:12 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  140 |     return NULL;
      |            ^~~~
exercises.c:138:6: note: declared here
  138 | void sumaV2(int a1, int a2, int b1, int b2, Vector *c)
      |      ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
66edf0f
Tue 23 Aug 2022 12:27:30 AM UTC: 
 exercises.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  140 |   return NULL;
      |          ^~~~
exercises.c:138:6: note: declared here
  138 | void sumaV2(int a1, int a2, int b1, int b2, Vector *c)
      |      ^~~~~~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
89ad6c8
Tue 23 Aug 2022 12:27:47 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5c8a435
Tue 23 Aug 2022 09:40:56 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a743915
Tue 23 Aug 2022 09:42:53 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  8|0
total_score: 70/70
74499a7
